# secure-software-project

./: .bandit  .dockerignore  .gitignore  .hadolint.yml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: .gitkeep
EVIDENCE/P10/: .gitkeep
EVIDENCE/P11/: .gitkeep
EVIDENCE/P12/: README.md  hardening_summary.md
app/: db.py  db_models.py  logging_config.py  main.py  middleware.py  models.py  repositories.py  schemas.py  services.py
app/utils/: file_safety.py
docs/: REVIEW_CHECKLIST.md
docs/adr/: ADR-001-rfc7807-errors.md  ADR-002-input-validation.md  ADR-003-secure-file-handling.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
k8s/: deployment.yaml  networkpolicy.yaml  service.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: test_api.py  test_errors.py  test_file_handling.py  test_validation.py  test_wagonee.db
